--- a/drag_and_drop_stuff/react-dnd-starter/package.json
+++ b/drag_and_drop_stuff/react-dnd-starter/package.json
@@ -1,43 +1,34 @@
 {
-  "name": "webpack-starter",
-  "version": "1.0.0",
-  "description": "",
-  "main": "client/src/index.js",
-  "scripts": {
-    "build": "webpack --config webpack.config.js",
-    "dev": "nodemon server/index.js"
-  },
+  "name": "custom-tier-list",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "core-js": "^3.2.1",
-    "ejs": "^2.7.1",
-    "express": "^4.17.1",
-    "file-loader": "^5.1.0",
-    "react": "^16.10.2",
-    "react-dnd": "^14.0.3",
-    "react-dnd-html5-backend": "^14.0.1",
-    "react-dom": "^16.10.2",
-    "react-modal": "^3.14.3",
-    "react-router-dom": "^5.1.2"
+    "@types/jest": "24.0.11",
+    "@types/node": "11.13.6",
+    "@types/react": "16.8.14",
+    "@types/react-dom": "16.8.4",
+    "react": "^16.8.6",
+    "react-beautiful-dnd": "^11.0.0",
+    "react-dom": "^16.8.6",
+    "react-scripts": "2.1.8",
+    "typescript": "3.4.4"
   },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
   "devDependencies": {
-    "@babel/cli": "^7.6.2",
-    "@babel/core": "^7.6.2",
-    "@babel/node": "^7.6.2",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/polyfill": "^7.6.0",
-    "@babel/preset-env": "^7.6.2",
-    "@babel/preset-react": "^7.6.3",
-    "@babel/runtime": "^7.6.3",
-    "babel-loader": "^8.0.6",
-    "css-loader": "^3.2.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "nodemon": "^1.19.4",
-    "style-loader": "^1.0.0",
-    "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-middleware": "^3.7.2",
-    "webpack-hot-middleware": "^2.25.0"
+    "@types/react-beautiful-dnd": "^11.0.1"
   }
 }
