removing folder, going another way

--- a/drag_and_drop_stuff/react-dndn-morioh/package.json
+++ b/drag_and_drop_stuff/react-dndn-morioh/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-dnd-mahmoud-shehata",
+  "name": "react-dndn-morioh",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
