--- a/drag_and_drop_stuff/react-dnd-pedro-tech/package.json
+++ b/drag_and_drop_stuff/react-dnd-pedro-tech/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-dndn-morioh",
+  "name": "react-dnd-pedro-tech",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,8 +7,9 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
+    "react-dnd": "^14.0.3",
+    "react-dnd-html5-backend": "^14.0.1",
     "react-dom": "^17.0.2",
-    "react-dropzone": "^11.3.4",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
