--- a/react-draggable-tutorial/package.json
+++ b/react-draggable-tutorial/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-dnd-official",
+  "name": "react-draggable-tutorial",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,9 +7,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
-    "react-dnd": "^14.0.3",
-    "react-dnd-html5-backend": "^14.0.1",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.4",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
