updating testing stuff

--- a/drag_and_drop/circles-kanban-two-droppables/package.json
+++ b/drag_and_drop/circles-kanban-two-droppables/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kanban-circles",
+  "name": "two-droppables-kanban-circles",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
