--- a/drag_and_drop/vertical-list-with-multiple-drop-targets/package.json
+++ b/drag_and_drop/vertical-list-with-multiple-drop-targets/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kanban-circles",
+  "name": "vertical-list-with-multiple-drop-targets",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,8 +10,6 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "uuid": "^8.3.2",
-    "uuidv4": "^6.2.12",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
